# wildfire_hyperdrive_ssrr_2024

./: .gitignore  2023-02-01 32270462.txt  2023-02-01 camera_controller.txt  2023-02-01 hsi_camera_api.txt  CMakeLists.txt  Install.md  README.md  package.xml  plugin_description.xml  stack.xml
config/: imec.xml
demosaicking/: demosaicking.py
json_files/: classes.txt
kvh/: CMakeLists.txt  package.xml
kvh_driver/: CMakeLists.txt  devices.xml  mainpage.dox  manifest.xml  package.xml
kvh_driver/cfg/: KVHDriver.cfg  kvh_driver.cfg
kvh_driver/doc/: manifest.yaml
kvh_driver/doc/html/: 05_8catkin-test-results_8sh_8develspace_8context_8py.html  05_8catkin-test-results_8sh_8develspace_8context_8py_source.html  KVHDriverConfig-usage_8dox.html  KVHDriverConfig_8dox.html  KVHDriverConfig_8h.html  KVHDriverConfig_8h__dep__incl.map  KVHDriverConfig_8h__dep__incl.md5  KVHDriverConfig_8h__incl.md5  KVHDriverConfig_8h_source.html  KVHDriverConfig_8py.html  KVHDriverConfig_8py_source.html  KVHParamsConfig-usage_8dox.html  KVHParamsConfig_8dox.html  KVHParamsConfig_8h.html  KVHParamsConfig_8h__incl.md5  KVHParamsConfig_8h_source.html  KVHParamsConfig_8py.html  KVHParamsConfig_8py_source.html  ____init_____8py.html  ____init_____8py_source.html  _formulas.tex  annotated.html  catkin__generated_2installspace_2__setup__util_8py.html  catkin__generated_2installspace_2__setup__util_8py_source.html  cfg_2____init_____8py.html  cfg_2____init_____8py_source.html  classes.html  classkvh__driver_1_1IMUFilter-members.html  classkvh__driver_1_1IMUFilter.html  classkvh__driver_1_1IMUFilter__inherit__graph.map  classkvh__driver_1_1IMUFilter__inherit__graph.md5  classkvh__driver_1_1KVHDriverConfig-members.html  classkvh__driver_1_1KVHDriverConfig.html  classkvh__driver_1_1KVHDriverConfigStatics-members.html  classkvh__driver_1_1KVHDriverConfigStatics.html  classkvh__driver_1_1KVHDriverConfig_1_1AbstractGroupDescription-members.html  classkvh__driver_1_1KVHDriverConfig_1_1AbstractGroupDescription.html  classkvh__driver_1_1KVHDriverConfig_1_1AbstractGroupDescription__inherit__graph.map  classkvh__driver_1_1KVHDriverConfig_1_1AbstractGroupDescription__inherit__graph.md5  classkvh__driver_1_1KVHDriverConfig_1_1AbstractParamDescription-members.html  (+184 more)
kvh_driver/doc/html/latex/: 05_8catkin-test-results_8sh_8develspace_8context_8py.tex  KVHDriverConfig-usage_8dox.tex  KVHDriverConfig_8dox.tex  KVHDriverConfig_8h.tex  KVHDriverConfig_8h__dep__incl.eps  KVHDriverConfig_8h__dep__incl.md5  KVHDriverConfig_8h__incl.eps  KVHDriverConfig_8h__incl.md5  KVHDriverConfig_8py.tex  KVHParamsConfig-usage_8dox.tex  KVHParamsConfig_8dox.tex  KVHParamsConfig_8h.tex  KVHParamsConfig_8h__incl.eps  KVHParamsConfig_8h__incl.md5  KVHParamsConfig_8py.tex  ____init_____8py.tex  annotated.tex  catkin__generated_2installspace_2__setup__util_8py.tex  cfg_2____init_____8py.tex  classkvh__driver_1_1IMUFilter.tex  classkvh__driver_1_1IMUFilter__inherit__graph.eps  classkvh__driver_1_1IMUFilter__inherit__graph.md5  classkvh__driver_1_1KVHDriverConfig.tex  classkvh__driver_1_1KVHDriverConfigStatics.tex  classkvh__driver_1_1KVHDriverConfig_1_1AbstractGroupDescription.tex  classkvh__driver_1_1KVHDriverConfig_1_1AbstractGroupDescription__inherit__graph.eps  classkvh__driver_1_1KVHDriverConfig_1_1AbstractGroupDescription__inherit__graph.md5  classkvh__driver_1_1KVHDriverConfig_1_1AbstractParamDescription.tex  classkvh__driver_1_1KVHDriverConfig_1_1AbstractParamDescription__inherit__graph.eps  classkvh__driver_1_1KVHDriverConfig_1_1AbstractParamDescription__inherit__graph.md5  classkvh__driver_1_1KVHDriverConfig_1_1DEFAULT.tex  classkvh__driver_1_1KVHDriverConfig_1_1GroupDescription.tex  classkvh__driver_1_1KVHDriverConfig_1_1GroupDescription__inherit__graph.eps  classkvh__driver_1_1KVHDriverConfig_1_1GroupDescription__inherit__graph.md5  classkvh__driver_1_1KVHDriverConfig_1_1ParamDescription.tex  classkvh__driver_1_1KVHDriverConfig_1_1ParamDescription__inherit__graph.eps  classkvh__driver_1_1KVHDriverConfig_1_1ParamDescription__inherit__graph.md5  classkvh__driver_1_1KVHDriverNode.tex  classkvh__driver_1_1KVHParamsConfig.tex  classkvh__driver_1_1KVHParamsConfigStatics.tex  (+86 more)
kvh_driver/doc/html/search/: all_5f.js  all_61.js  all_62.js  all_63.js  all_64.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6b.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_78.js  all_79.js  all_7a.js  all_7e.js  classes_61.js  classes_63.js  classes_64.js  classes_67.js  classes_69.js  classes_6b.js  classes_6c.js  classes_6f.js  classes_70.js  files_63.js  files_64.js  files_69.js  files_6b.js  files_6c.js  files_6f.js  files_73.js  functions_5f.js  (+40 more)
kvh_driver/include/kvh_driver/: configurations.h  constants.h  imu_filter.h  imufilter.hpp  kvh_driver_node.h  kvh_imu.h  kvhmessage.h  linearfilter.h  odometryfilter.hpp
kvh_driver/launch/: kvh_param.yaml
kvh_driver/src/: CMakeLists.txt
kvh_driver/src/helpers/: CMakeLists.txt  configurations.cpp  imu_filter.cpp  imufilter.cpp  kvh_imu.cpp  linearfilter.cpp  odometryfilter.cpp
kvh_driver/src/nodes/: CMakeLists.txt  kvh_driver_node.cpp  kvh_test_node.cpp
kvh_driver/src/util/: CMakeLists.txt  bit.cpp  config.cpp  drift_test.cpp  serialtest.cpp  stream_viewer.cpp
kvh_driver/test/: CMakeLists.txt  kvh_imu_test.cpp  kvhconfigtest.cpp  kvhtest.cpp  testdevices.xml
launch/: bag_reader.launch  camera.launch  master.launch  master_opt.launch  profile.launch  profile_camera.launch  synchronousCameras.launch  syncronousCameras.launch  tester.launch
lib/: hsi_mosaic  libQt5XcbQpa.so.5.15  libboost_chrono.so.1.72.0  libboost_filesystem.so.1.72.0  libboost_locale.so.1.72.0  libboost_thread.so.1.72.0  libhdf5.so.10.3.2  libihspt_common_qt.so.1.0  libihspt_datatypes.so.1.0  libihspt_graphics_qt.so.1.0  libihspt_gui_qt.so.1.0  libihspt_processing.so.1.0  libihspt_simple_widgets_qt.so.1.0  libopencv_imgcodecs.so.3.4.12  libxml2.so.2
matlab/: imec_monocular.m  imec_monocular.mat  stereo_hsi_system.m  ximea_monocular.m
msg/: DataCube.msg  MultipleDataCubes.msg  (+1 more)
(+163 files in other folders)
